# VastMiningSimulation

./: .gitignore  CMakeLists.txt  README.md  my_results.txt
include/: Args.h  MiningTruck.h  Simulation.h  UnloadStation.h
src/: MiningTruck.cpp  Simulation.cpp  UnloadStation.cpp  main.cpp
tests/: TestArgs.cpp  TestMiningTruck.cpp  TestUnloadStation.cpp
